fix scrollbars (maybe)

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
 * {
   overflow-x: hidden;
 }
+
+.no-overflow * {
+  overflow: hidden;
+}
